<resources>
    <string name="app_name">NavLayouts01</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_enviar">Enviar</string>
    <string name="txt_validate_phone">Valide su número telefónico</string>
    <string name="hint_validate_phone">Ingrese su número telefónico</string>
    <string name="txt_input_code">Ingrese su código de verificación</string>
    <string name="txt_name">Nombre:</string>
    <string name="hint_name">Escriba su nombre</string>
    <string name="txt_last_name">Apellido:</string>
    <string name="hint_last_name">Escriba su primer apellido</string>
    <string name="btn_register">Crear cuenta</string>
    <string name="txt_genero">Sexo:</string>
    <string name="hint_genero">Seleccione su sexo</string>
    <string name="hint_fech_nac">Seleccione la fecha</string>
    <string name="txt_fech_nac">Fecha de nacimiento:</string>
    <string name="txt_fecha_nac">Seleccione su fecha de nacimiento</string>
    <string name="description_shoping">Carrito de compras</string>
    <string name="description_search">Búsqueda</string>
    <string name="zero_0">0</string>
    <string name="description_logo">logotipo</string>
    <string name="txt_oper_choice">¡Elige la operación \n que deseas realizar!</string>
    <string name="title_menu_home">Inicio</string>
    <string name="title_menu_stores">Tiendas</string>
    <string name="title_menu_movs">Movs</string>
    <string name="title_menu_promos">Promos</string>
    <string name="title_menu_profile">Perfil</string>
    <string name="btn_abonar">Abonar</string>
    <string name="txt_credit_piramid">créditos PIRAMID</string>
    <string name="txt_efectivo_tarjeta">Paga en efectivo \n o tarjeta y abona</string>
    <string name="txt_pay_cel">Paga tus compras \n con tu saldo de</string>
    <string name="btn_pagar">Pagar</string>
    <string name="title_movs_list">Lista de movimientos</string>
    <string name="title_list_promos">Lista de Promos</string>
    <string name="title_stores">Ubicación de tiendas</string>
    <string name="title_profile">Opciones del perfil</string>
    <string name="title_scan_code">Escaneo de código</string>
    <string name="title_detail_mov">Detalle movimiento</string>
    <string name="title_detail_promo">Detalle promo</string>
    <string name="img_descript">Imagen</string>
    <string name="txt_credits">créditos</string>
    <string name="txt_creditos_cant">640</string>
    <string name="txt_total_creds">Total de créditos</string>
    <string name="txt_hi_username">Hola, Username</string>
    <string name="txt_sexo">Seleccione su sexo</string>
    <string name="txt_mujer">Mujer</string>
    <string name="txt_hombre">Hombre</string>

    <string name="bottom_sheet_behavior" translatable="false">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="title_select_ur_sex">Selecciona tu sexo</string>
    <string name="txt_user_nd_last">Username Lastname</string>
    <string name="txt_phone">+52 55 8888 4444</string>
    <string name="btn_personal_data">Editar datos personales</string>
    <string name="btn_support">Ayuda y soporte</string>
    <string name="btn_terms">Términos y condiciones</string>
    <string name="btn_version">Version X.X.X</string>
    <string name="btn_close">Cerrar sesión</string>
    <string name="txt_total_comps">Total de compras</string>
    <string name="txt_mexican_pesos">MXN</string>
    <string name="txt_cant_pesos">$ 500.00</string>
    <string name="txt_title_movie">Title movie</string>
    <string name="txt_credits_in">150 créditos</string>
    <string name="txt_amont_pay_mov">$500.00</string>
    <string name="txt_product_name">Nombre del producto</string>
    <string name="txt_descript_product">Breve descripción</string>
    <string name="txt_promo_name">Nombre de la promo</string>
    <string name="txt_cant">24</string>
    <string name="txt_taquilla">Taquilla:</string>
    <string name="txt_soda_fount">Fuente de sodas:</string>
    <string name="txt_date">Fecha:</string>
    <string name="txt_date_data">dd-MM-aaaa</string>
    <string name="txt_abono">Abono:</string>
    <string name="txt_pago">Pago:</string>
    <string name="txt_detal_fount">Fuente de sodas:</string>
    <string name="txt_vigencia">Vigencia:</string>
    <string name="txt_muestra_codigo">Muestra este código para:</string>
    <string name="txt_abonar">Abonar puntos PIRAMID</string>
    <string name="txt_phone_xample">5512345678</string>

    <string-array name="array_sexo_persona">
        <item>Mujer</item>
        <item>Hombre</item>
    </string-array>
</resources>