<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/home_selector"
        android:title="@string/title_menu_home"/>

    <item android:id="@+id/storesFragment"
        android:enabled="true"
        android:icon="@drawable/stores_selector"
        android:title="@string/title_menu_stores"/>

    <item android:id="@+id/movsFragment"
        android:enabled="true"
        android:icon="@drawable/wallet_selector"
        android:title="@string/title_menu_movs"/>

    <item android:id="@+id/promosFragment"
        android:enabled="true"
        android:icon="@drawable/promo_selector"
        android:title="@string/title_menu_promos"/>

    <item android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/user_selector"
        android:title="@string/title_menu_profile"/>
</menu>