<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/color_ultre_light_tone"
    app:cardElevation="@dimen/middle_margin"
    android:layout_marginVertical="@dimen/middle_margin"
    app:cardCornerRadius="@dimen/common_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/min_marghin"
        android:layout_marginVertical="@dimen/min_marghin"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgIconCard"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_marginStart="@dimen/min_marghin"
            android:contentDescription="@string/img_descript"
            android:src="@drawable/doritos"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/min_marghin"
            android:layout_marginHorizontal="@dimen/middle_margin"
            android:gravity="center"
            android:weightSum="1"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitleMov"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/default_grey"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/middle_margin"
                    android:text="@string/txt_product_name" />

                <TextView
                    android:id="@+id/tvDescript"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/default_grey"
                    android:textSize="12sp"
                    android:text="@string/txt_descript_product" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_weight="0.4">

                <TextView
                    android:id="@+id/tvAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_primary"
                    android:layout_marginEnd="@dimen/middle_margin"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/txt_cant_pesos" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_primary"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/txt_mexican_pesos" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>