<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context=".bottomSheets.selectSex.view.SelectSexFragment">

    <data>
        <variable
            name="listener"
            type="org.lycancypher.navlayouts01.bottomSheets.selectSex.view.adapters.OnClickListener" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/transparent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_select_ur_sex"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginBottom="@dimen/common_margin"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/default_grey" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMujer"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> listener.onClickMujer()}"
                    android:text="@string/txt_mujer"
                    android:textAllCaps="false" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/default_grey" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnHombre"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> listener.onClickHombre()}"
                    android:text="@string/txt_hombre"
                    android:textAllCaps="false" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </FrameLayout>
</layout>