<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="listener"
            type="org.lycancypher.navlayouts01.ui.homeModule.view.adapters.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.homeModule.view.HomeFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/margin_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@integer/margin_start" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/margin_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@integer/margin_end" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="@integer/margin_top_bar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/margin_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="@integer/margin_bottom" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/common_margin"
            app:cardElevation="@dimen/middle_margin"
            android:backgroundTint="@color/color_light_tone"
            app:layout_constraintStart_toStartOf="@id/margin_start"
            app:layout_constraintEnd_toEndOf="@id/margin_end"
            app:layout_constraintTop_toTopOf="@id/margin_top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="@dimen/common_margin"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tvHiUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/color_primary"
                    android:text="@string/txt_hi_username"/>

                <TextView
                    android:id="@+id/tvTotalPoints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="@color/default_grey"
                    android:text="@string/txt_total_creds"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/tvPoints"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:textColor="@color/color_primary"
                        android:text="@string/txt_creditos_cant"/>

                    <TextView
                        android:id="@+id/tvPts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/color_primary"
                        android:text="@string/txt_credits"/>

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvOper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="@color/default_grey"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/txt_oper_choice"
            app:layout_constraintStart_toStartOf="@id/margin_start"
            app:layout_constraintEnd_toEndOf="@id/margin_end"
            app:layout_constraintTop_toBottomOf="@id/cvHeader"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/separator"
            app:layout_constraintBottom_toBottomOf="@id/separator"
            app:layout_constraintStart_toStartOf="@id/margin_start"
            app:layout_constraintEnd_toStartOf="@id/separator">

            <ImageView
                android:id="@+id/ivPayDirecto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/paga_directo"
                android:contentDescription="@string/img_descript" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPayDirecto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/default_grey"
                android:layout_marginTop="@dimen/big_margin"
                android:text="@string/txt_efectivo_tarjeta"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCredits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="@dimen/big_margin"
                android:textColor="@color/color_primary"
                android:text="@string/txt_credit_piramid"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_abonar"
                android:onClick="@{() -> listener.onClickCode()}"
                style="@style/ButtonTheme"/>

        </LinearLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="1dp"
            android:layout_height="400dp"
            android:background="@color/default_grey"
            app:layout_constraintTop_toBottomOf="@id/tvOper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/separator"
            app:layout_constraintBottom_toBottomOf="@id/separator"
            app:layout_constraintEnd_toEndOf="@id/margin_end"
            app:layout_constraintStart_toEndOf="@id/separator">

            <ImageView
                android:id="@+id/ivPiramidPay"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/midas_pay"
                android:contentDescription="@string/img_descript" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPiramidPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/default_grey"
                android:layout_marginTop="@dimen/big_margin"
                android:text="@string/txt_pay_cel"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCreditsPiramid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="@dimen/big_margin"
                android:textColor="@color/color_primary"
                android:text="@string/txt_credit_piramid"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_pagar"
                android:onClick="@{() -> listener.onClickCode()}"
                style="@style/ButtonTheme"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>