<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detailPromoModule.view.DetailPromoFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/margin_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@integer/margin_start" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/margin_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@integer/margin_end" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="@integer/margin_top_bar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/margin_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="@integer/margin_bottom" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/common_margin"
            app:cardElevation="@dimen/middle_margin"
            android:backgroundTint="@color/color_light_tone"
            app:layout_constraintStart_toStartOf="@id/margin_start"
            app:layout_constraintEnd_toEndOf="@id/margin_end"
            app:layout_constraintTop_toTopOf="@id/margin_top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/middle_margin"
                android:layout_marginVertical="@dimen/common_margin"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginBottom="@dimen/common_margin"
                    android:textColor="@color/default_grey"
                    android:text="@string/txt_promo_name"/>

                <ImageView
                    android:id="@+id/imgIconCard"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/common_margin"
                    android:contentDescription="@string/img_descript"
                    android:src="@drawable/promo_apocal" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/common_margin"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/tvPoints"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:layout_marginHorizontal="@dimen/min_marghin"
                        android:textColor="@color/color_primary"
                        android:text="@string/txt_creditos_cant"/>

                    <TextView
                        android:id="@+id/tvPts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/color_primary"
                        android:text="@string/txt_credits"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvTotalComp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:maxLines="5"
                    android:textColor="@color/default_grey"
                    android:text="@string/txt_descript_product"
                    android:layout_marginBottom="@dimen/common_margin"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/tvTaquilla"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:textAlignment="textStart"
                        android:textSize="16sp"
                        android:textColor="@color/default_grey"
                        android:text="@string/txt_vigencia"/>

                    <TextView
                        android:id="@+id/tvCantTaquilla"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:textAlignment="textEnd"
                        android:textSize="16sp"
                        android:textColor="@color/default_grey"
                        android:layout_marginHorizontal="@dimen/min_marghin"
                        android:text="@string/txt_date_data"/>

                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>